--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
@@ -139,7 +139,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue" id="fooTipoEntidadVA" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue" action="tipoentidademplvigenciaafiliacion3" actionListener="#{controlTiposEntidades.recibirPagina('atrastipoentidademplvigenciaafiliacion3')}" id="fooTipoEntidadVA" value=""/>
                                     </f:facet>
                                 </p:column>
 
