--- a/DesignerRHN/DesignerRHN-war/web/formulacontratoentidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/formulacontratoentidad.xhtml
@@ -40,7 +40,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 728px; margin: -14px; height: 50px; border: none; color: blue"  id="fooProceso"  value="#{msg['tipoEntidad']}"/>
+                                        <p:commandButton style="width: 728px; margin: -14px; height: 50px; border: none; color: blue"  id="fooProceso"  action="tipoentidadformulacontratoentidad" actionListener="#{controlTiposEntidades.recibirPagina('atrastipoentidadformulacontratoentidad')}" value="#{msg['tipoEntidad']}"/>
                                     </f:facet>
                                 </p:column>
 
