--- a/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
@@ -102,7 +102,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer" >
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" id="fooparentesco" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" action="tiposfamiliaresperreferencialaboral1" actionListener="#{controlTiposFamiliares.recibirPagina('atrastiposfamiliaresperreferencialaboral1')}" id="fooparentesco" value=""/>
                                     </f:facet>
                                 </p:column>
 
