--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -123,7 +123,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooNombreJornada" value=""/>
+                                        <p:commandButton style="width: 190px; margin: -14px; height: 26px;  border: none; color: blue" action="centrocostoEmplVigenciaLocalizacion" actionListener="#{controlBetaCentrosCostos.recibirPagina('atrascentrocostoEmplVigenciaLocalizacion')}" id="fooNombreJornada" value=""/>
                                     </f:facet>
                                 </p:column>
 
