--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciasCargos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciasCargos.xhtml
@@ -179,6 +179,11 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+                                    
+                                    <f:facet name="footer" >
+                                        <p:commandButton value="" style="width: 170px; margin: -14px; height: 20px; border: none; color: blue" action="centrocostoemplvigenciacargo" actionListener="#{controlBetaCentrosCostos.recibirPagina('atrascentrocostoemplvigenciacargo')}" id="fooCentrosCostos" />
+                                    </f:facet>
+                                    
                                 </p:column>  
 
                                 <p:column headerText="Nombre_Jefe" sortBy="#{info.empleadojefe.persona.nombreCompleto}" filterBy="#{info.empleadojefe.persona.nombreCompleto}" filterMatchMode="contains" id="vcNombreJefe" width="150" filterStyle="display: none; visibility: hidden;" >                                                              
